# cad-kernel

./: Cargo.toml
kernel/: Cargo.toml
kernel/src/: lib.rs  line.rs  surface.rs  vertex.rs
kernel/src/boundary_geometry/: boundary_arc.rs  boundary_line.rs  boundary_loop.rs  boundary_polygon.rs  boundary_surface.rs  mod.rs
kernel/src/geometry/: arc.rs  line.rs  mod.rs  point.rs
kernel/src/sketch/: mod.rs  relations.rs
viewer/: Cargo.toml
viewer/shaders/: base_vert_shader.wgsl  line_sdf_shader.wgsl  line_shader.wgsl  sketch_shader.wgsl
viewer/src/: camera.rs  lib.rs  line.rs  line_rendering.rs  line_sdf.rs  line_shader.wgsl  main.rs  shader.wgsl  sketch_state.rs  vertex.rs
