[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
glam = "0.25.0"
smol = "1.3"
wgpu = { version = "0.18" }
winit = { version = "0.28" }
kernel = { path = "../kernel" }
